packages/ak-button/src/shadow.less
@import '~akutil-shared-styles/src/colors.less';
@import '~akutil-shared-styles/src/borders.less';

@em: 14;
@grid: 8;

@buttonHeight: unit(@grid * 4 / @em, em);
@compactButtonHeight: unit(@grid * 3 / @em, em);

@side-slot-margin: unit(@grid, px);

@ak-color-B75A: fade(@ak-color-B75, 60%);
@ak-color-B200A: fade(@ak-color-B200, 60%);
@ak-color-B100A: fade(@ak-color-B100, 32%);


// Link Button Colors
@linkColor: @ak-color-B400;
@linkColorHover: @ak-color-B300;
@linkColorActive: @linkColorHover;

// Disabled button Colors
@disabledColor: @ak-color-N40A;


.ak-button,
ak-button {
  display: inline-flex;
  white-space: nowrap;

  & > _shadow_root_ {
    display: inline-flex;
  }

  &[disabled] {
    pointer-events: none;
  }
}

:host {
  display: inline-flex;
  white-space: nowrap;
  vertical-align: middle;
}

:host(> _shadow_root_) {
  display: inline-flex;
}

:host([disabled]) {
  pointer-events: none;
}

::slotted([slot="before"]) {
  line-height: 0;
  margin-right: @side-slot-margin;
}
::slotted(:not([slot])) {
  line-height: 0;
  white-space: nowrap;
}
::slotted([slot="after"]) {
  line-height: 0;
  margin-left: @side-slot-margin;
}

.beforeSlot > * {
  line-height: 0;
  margin-right: @side-slot-margin;
}
.defaultSlot > * {
  line-height: 0;
  white-space: nowrap;
}
.afterSlot > * {
  line-height: 0;
  margin-left: @side-slot-margin;
}
.beforeSlotWrapper {
  align-self: center;
  display: flex;
}
.defaultSlotWrapper {
  display: flex;
}
.afterSlotWrapper {
  align-self: center;
  display: flex;
}

.buttonContent {
  align-items: baseline;
  display: flex;
  flex-wrap: nowrap;
  pointer-events: none;
}
.beforeSlot,
.afterSlot {
  display: inline-flex;
}

.defaultSlot {
  display: inline-flex;
  flex-wrap: nowrap;
}
.root {
  display: inline-block;
}


.button {
  align-items: center;
  box-sizing: border-box;
  border-width: 0;
  border-radius: @ak-border-radius;
  display: inline-flex;
  font-style: normal;
  font-size: inherit;
  height: @buttonHeight;
  line-height: @buttonHeight;
  margin: 0;
  outline: none;
  padding: unit((@grid * 0.75), px) unit(@grid * 1.5, px);
  padding-top: 0;
  padding-bottom: 0;
  text-align: center;
  transition: background 0.1s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
  user-select: none;
  vertical-align: middle;

  &.spacing-compact {
    height: @compactButtonHeight;
    line-height: @compactButtonHeight;
  }

  &.spacing-none {
    height: initial;
    line-height: initial;
    padding: 0;
  }

  &::-moz-focus-inner {
    margin: 0;
    padding: 0;
    border: 0;
  }

  &:hover {
    cursor: pointer;
    transition: background 0s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
  }

  &:active {
    transition-duration: 0s;
  }

  &:focus {
    transition-duration: 0s, 0.2s;
  }

  &.disabled {
    cursor: not-allowed;
    ::slotted(*) {
      pointer-events: none
    };
  }
}

.button-style (@bg; @color; @hoverBg; @activeBg; @activeColor; @hoverTextDecoration: none; @hoverColor: @color) {
  background: @bg;
  color: @color;
  text-decoration: none;

  &:hover {
    background: @hoverBg;
    color: @hoverColor;
    text-decoration: @hoverTextDecoration;
  }

  &:active {
    background: @activeBg;
    color: @activeColor;
  }

  &:focus {
    box-shadow: 0 0 0 2px @ak-color-B200A;
  }
}

.theme-default {
  &.appearance-default {
    .button-style(
      @bg: @ak-color-N20A;
      @color: @ak-color-N400;
      @hoverBg: @ak-color-N30A;
      @activeBg: @ak-color-B75A;
      @activeColor: @ak-color-B400;
    )
  }

  &.appearance-subtle {
    .button-style(
      @bg: none;
      @color: @ak-color-N400;
      @hoverBg: @ak-color-N30A;
      @activeBg: @ak-color-B75A;
      @activeColor: @ak-color-B400;
    )
  }

  &.appearance-primary {
    .button-style(
      @bg: @ak-color-B400;
      @color: @ak-color-N0;
      @hoverBg: @ak-color-B500;
      @activeBg: @ak-color-B300;
      @activeColor: @ak-color-N0;
    );

    &.disabled {
      .button-style(
        @bg: @ak-color-B400;
        @color: fade(@ak-color-N0, 50%);
        @hoverBg: @ak-color-B400;
        @activeBg: @ak-color-B400;
        @activeColor: fade(@ak-color-N0, 50%);
      )
    }
  }

  &.disabled {
    .button-style(
      @bg: @ak-color-N20A;
      @color: @ak-color-N70;
      @hoverBg: @ak-color-N20A;
      @activeBg: @ak-color-N20A;
      @activeColor: @ak-color-N70;
    )
  }

  &.selected {
    .button-style(
      @bg: @ak-color-N700;
      @color: @ak-color-N20;
      @hoverBg: @ak-color-N700;
      @activeBg: @ak-color-N700;
      @activeColor: @ak-color-N20;
    );
  }

  &.appearance-link {
    .button-style(
      @bg: none;
      @color: @ak-color-B400;
      @hoverBg: none;
      @hoverColor: @ak-color-B300;
      @activeBg: none;
      @activeColor: @ak-color-B500;
      @hoverTextDecoration: underline;
    );

    &.disabled {
      .button-style(
        @bg: none;
        @color: @ak-color-N70;
        @hoverBg: none;
        @activeBg: none;
        @activeColor: @ak-color-N70;
      );
    }
  }
}

.theme-dark {
  &.appearance-default {
    .button-style(
      @bg: fade(@ak-color-N0, 8%);
      @color: @ak-color-N0;
      @hoverBg: fade(@ak-color-N0, 12%);
      @activeBg: @ak-color-B100A;
      @activeColor: @ak-color-N0;
    )
  }

  &.appearance-subtle {
    .button-style(
      @bg: none;
      @color: @ak-color-N0;
      @hoverBg: fade(@ak-color-N0, 12%);
      @activeBg: @ak-color-B100A;
      @activeColor: @ak-color-N0;
    )
  }

  &.appearance-primary {
    .button-style(
      @bg: @ak-color-B200;
      @color: @ak-color-N0;
      @hoverBg: @ak-color-B100;
      @activeBg: @ak-color-B300;
      @activeColor: @ak-color-N0;
    );

    &.disabled {
      .button-style(
        @bg: @ak-color-B400;
        @color: fade(@ak-color-N0, 50%);
        @hoverBg: @ak-color-B400;
        @activeBg: @ak-color-B400;
        @activeColor: fade(@ak-color-N0, 50%);
      )
    }
  }

  &.disabled {
    .button-style(
      @bg: fade(@ak-color-N0, 4%);
      @color: @ak-color-N100;
      @hoverBg: fade(@ak-color-N0, 4%);
      @activeBg: fade(@ak-color-N0, 4%);
      @activeColor: @ak-color-N100;
    )
  }

  &.selected {
    .button-style (
      @bg: @ak-color-N20;
      @color: @ak-color-N700;
      @hoverBg: @ak-color-N20;
      @activeBg: @ak-color-N20;
      @activeColor: @ak-color-N700;
    )
  }

  &.appearance-link {
    .button-style(
      @bg: none;
      @color: @ak-color-B75;
      @hoverBg: none;
      @hoverColor: @ak-color-B75;
      @activeBg: none;
      @activeColor: @ak-color-B75;
      @hoverTextDecoration: underline;
    );

    &.disabled {
      .button-style(
        @bg: none;
        @color: @ak-color-N100;
        @hoverBg: none;
        @activeBg: none;
        @activeColor: @ak-color-N100;
      );
    }
  }
}

